[package]
name = "ocsd"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "OCSD temperature reporting interface library"
repository = "https://github.com/conroy-cheers/ocsd"
readme = "README.md"

[features]
client = ["dep:devmem"]

[dependencies]
bitmask-enum = "2.2.4"
bytemuck = { version = "1.16.1", features = ["derive"] }
devmem = { version = "0.1.1", optional = true }
